# rs-pathtracer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/materials/: dialectric.rs  lambertian.rs  metal.rs  mod.rs
src/raytracing/: mod.rs  tracing.rs  types.rs
src/raytracing/cameras/: mod.rs  types.rs  util.rs
src/raytracing/materials/: dialectric.rs  diffuse_light.rs  lambertian.rs  metal.rs  mod.rs
src/raytracing/shapes/: cuboid.rs  mod.rs  plane.rs  rect_xy.rs  rect_xz.rs  rect_yz.rs  sphere.rs
src/raytracing/util/: mod.rs  random.rs
src/shapes/: sphere.rs
src/util/: maths.rs
